--- a/Deeplearning_Project_01_Fashion_Mist.ipynb
+++ b/Deeplearning_Project_01_Fashion_Mist.ipynb
@@ -23,7 +23,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **1. import Necessery Librarise **"
+        "*1. import Necessery Librarise*"
       ],
       "metadata": {
         "id": "JDwPcmERrASi"
